--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: default
 title: Dominic St-Pierre | Web Development with ASP.NET MVC, JavaScript and NodeJS
 ---
+{% include nav.html %}
+
 <div class="container">
     <div class="blog-header">
         <h1 class="blog-title">Hi, I'm Dominic St-Pierre</h1>
