--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@ title: Dominic St-Pierre | Web Development with ASP.NET MVC, JavaScript and Node
         <h1 class="blog-title">Hi, I'm Dominic St-Pierre</h1>
         <p class="lead blog-description">A developer-entrepreneur working hard to bootstrap a successful and sustainable product business.</p>
     </div>
-    {% include post_list.html param = site.posts %}
+    % include post_list.html param = site.posts %
 </div><!-- /.container -->
