nonsense, should work

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: default
 title: Dominic St-Pierre | Web Development with ASP.NET MVC, JavaScript and NodeJS
 ---
+
+<div></div>
+
 {% include nav.html %}
 
 <div class="container">
