--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-﻿---
-layout: default
-title: Dominic St-Pierre | Web Development with ASP.NET MVC, JavaScript and NodeJS
 ---
-
-<div></div>
+layout: layout
+title: test
+---
 
 {% include nav.html %}
 
 <div class="container">
-    <div class="blog-header">
-        <h1 class="blog-title">Hi, I'm Dominic St-Pierre</h1>
-        <p class="lead blog-description">A developer-entrepreneur working hard to bootstrap a successful and sustainable product business.</p>
-    </div>
-    {% include post_list.html param = site.posts %}
-</div><!-- /.container -->
+	<div class="blog-header">
+		<h1 class="blog-title">Dominic St-Pierre</h1>
+		<p class="lead blog-description">blog desc</p>
+	</div>
+	{% include post_list.html param = site.posts %}
+</div>
+
