add sharing button, add limit on home page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ title: test
 		<h1 class="blog-title">Dominic St-Pierre</h1>
 		<p class="lead blog-description">blog desc</p>
 	</div>
-	{% include post_list.html param = site.posts %}
+	{% include post_list.html param = site.posts limit:9 %}
 </div>
 
