--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: layout
 title: test
 ---
 
-{% include nav.html %}
+{% include nav.html param="home" %}
 
 <div class="container">
 	<div class="blog-header">
