added highlight css and all missing tags and categories pages

--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Looks like that one's gone missing"
-summary: "I move pages offline from time to time - might be this is one"
+summary: "The blog's categories and tags did changed lately."
 ---
 
 <div class="page-header">
@@ -9,7 +9,8 @@ summary: "I move pages offline from time to time - might be this is one"
     <p>
         I just migrated my blog over to Jekyll. 
         I tried to keep the same URL scheme, but maybe one post was not properly 
-        named. Let me know via Twitter - @dominicstpierre I will have this fixed asap.
+        named. Let me know via Twitter - <a href="https://twitter.com/dominicstpierre">@dominicstpierre</a> 
+        I will have this fixed asap.
     </p>
 
     <h3>Here's the latest posts</h3>
