added saas builder first draft

--- a/about.html
+++ b/about.html
@@ -9,13 +9,10 @@ title: "Dominic St-Pierre | About Me"
     <div class="row">
         <div class="col-md-10">
             <div class="blog-header">
-                <h1 class="blog-title">About Me</h1>
+                <h1 class="blog-title">I can build your SaaS</h1>
                 <p class="lead blog-description">
-                    I'm the owner at <a href="https://focuscentric.com">Focus Centric inc.</a>, where I do consulting
-                    and create technical training screencasts in French for Python, JavaScript, C# etc.
-                    <br><br>
-                    I'm the CTO at <a href="http://www.leadfuze.com">LeadFuze</a>, a service that help you
-                    get hot leads in your inbox.
+                  If you need to build an MVP for the initial state of your product. I can help you with that.
+                  Let’s call this MVP As a Service.
                 </p>
             </div>
         </div>
@@ -34,11 +31,63 @@ title: "Dominic St-Pierre | About Me"
         </div>
     </div>
 
-    <div class='row'>
-        <p>TODO: write this page ;)
+    <div class="row">
+<p>
+I’ve been playing the CTO and CEO roles for startups I’ve built in the last 8 years. To be honest I don’t really enjoy
+marketing and having to take all decisions and actions to get the product to the next level.
+</p>
+<p>
+I’m a developer and I’ve a huge entrepreneurship desired. That’s why I’m trying a productized services. Building
+a solid first version for your SaaS product.
+</p>
+<h3>Finding a good developer is hard</h3>
+<p>
+Once you’ve got your idea somewhat validated, you might need to find a developer to build the software.
+Getting a programmer from freelance sites can be hard, finding someone that will build you a solid base that you’ll
+be able to grow from is even harder.
+</p>
+<h3>You need something quickly</h3>
+<p>
+I’m offering a complete dedicated schedule to work solely on your product. This mean that I will be
+online on Skype / Slack asking and answering questions, showing the evolution of the product every
+day.
+</p>
+<h3>I can be your CTO for the initial part and more</h3>
+<p>
+One the product is delivered and in production, I can still be contracted to do maintenance and enhancement.
+</p>
+
+<h3>I handle everything until you’re in production</h3>
+<p>
+During the development phase I can offer hosting, even if the product is in private beta. Once everything is
+completed the way you want it, I simply transfer everything to you.
+</p>
+<h3>What would be the price?</h3>
+<p>
+As all product are different, I cannot estimate without at least a first contact.
+</p>
+<p>
+Let me know if you want more information.
+</p>
+<form id="contact-form" role="form">
+  <input type="email" name="_replyto" class="form-control" placeholder="Your email">
+  <textarea name="body" class="form-control" placeholder="Your message"></textarea>
+  <input type="submit" class="btn btn-primary" value="Send">
+</form>
+
     </div>
 </div>
 
+<script type="text/javascript">
+  $(function() {
+    var e = 'ZG9taW5pY3N0cGllcnJlQGdtYWlsLmNvbQ==';
+    var base_url = '//formspree.io/';
+    var action = base_url + atob(e);
+    $('#contact-form').attr('action', action);
+  });
+</script>
+
+</script>
 <!-- Place this tag after the last widget tag. -->
 <script type="text/javascript">
     (function () {
