replaced markdown by html on home page

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@ title: "Dominic St-Pierre | Web Developer, entrepreneur"
                   <div class="col-sm-4 col-md-3 col-lg-2">
                     <img class="img-responsive" src="/assets/img/startupvf.png" alt="Startup (v.f.)" />
                   </div>
-                  <div class="col-sm-8 col-md-9 col-lg-10">
+                  <div class="col-sm-7 col-md-8 col-lg-9">
                     <p class="lead">
-                    I'm the co-host of a podcast called [Startup (v.f.)](http://startupvf.com)
-                    on building SaaS and journey of two developer entrepreneur trying to
-                    market their products. It's in **French**.
+                    I'm the co-host of a podcast called <a href="http://startupvf.com">Startup (v.f.)</a>
+                    on building SaaS and journey of two developers / entrepreneurs trying to
+                    market their products. It's in <strong>French</strong>.
                   </p>
                   </div>
             </div>
