set hire me as not available

--- a/about.html
+++ b/about.html
@@ -9,10 +9,10 @@ title: "Dominic St-Pierre | About Me"
     <div class="row">
         <div class="col-md-10">
             <div class="blog-header">
-                <h1 class="blog-title">I can build your SaaS</h1>
+                <h1 class="blog-title">Not available atm</h1>
                 <p class="lead blog-description">
-                  If you need to build an MVP for the initial state of your product. I can help you with that.
-                  Let’s call this MVP As a Service.
+                  I'm unavailable at the moment. I think consulting is behind me and
+                  do not plan on doing consulting again.
                 </p>
             </div>
         </div>
@@ -29,71 +29,6 @@ title: "Dominic St-Pierre | About Me"
                 </p>
             </div>
         </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-12 blog-post">
-<p>
-I’ve been playing the CTO and CEO roles for startups I’ve built in the last 8 years. To be honest I don’t really enjoy
-marketing and having to take all decisions and actions to get the product to the next level.
-</p>
-<p>
-I’m a developer and I’ve a huge entrepreneurship desired. That’s why I’m trying a productized services. Building
-a solid first version for your SaaS product.
-</p>
-<div class="row">
-  <div class="col-sm-1 col-md-6">
-<h3>Finding a good developer is hard</h3>
-<p>
-Once you’ve got your idea somewhat validated, you might need to find a developer to build the software.
-Getting a programmer from freelance sites can be hard, finding someone that will build you a solid base that you’ll
-be able to grow from is even harder.
-</p>
-</div>
-<div class="col-sm-1 col-md-6">
-<h3>You need something quickly</h3>
-<p>
-I’m offering a complete dedicated schedule to work solely on your product. This mean that I will be
-online on Skype / Slack asking and answering questions, showing the evolution of the product every
-day.
-</p>
-</div>
-</div>
-<div class="row">
-<div class="col-sm-1 col-md-6">
-<h3>I can be your CTO for the initial part and more</h3>
-<p>
-One the product is delivered and in production, I can still be contracted to do maintenance and enhancement.
-</p>
-</div>
-<div class="col-sm-1 col-md-6">
-<h3>I handle everything until you’re in production</h3>
-<p>
-During the development phase I can offer hosting, even if the product is in private beta. Once everything is
-completed the way you want it, I simply transfer everything to you.
-</p>
-</div>
-</div>
-<div class="row">
-  <div class="col-sm-1 col-md-6">
-<h3>What would be the price?</h3>
-<p>
-As all product are different, I cannot estimate without at least a first contact.
-</p>
-<p>
-Let me know if you want more information.
-</p>
-</div>
-<div class="col-sm-1 col-md-6">
-  <h3>Contact me</h3>
-<form id="contact-form" role="form" method="post">
-  <input type="email" name="_replyto" class="form-control" placeholder="Your email">
-  <textarea name="body" style="width: 100%;height: 100px;" class="form-control" placeholder="Your message"></textarea>
-  <input type="submit" class="btn btn-primary" value="Send">
-</form>
-</div>
-</div>
-</div>
     </div>
 </div>
 
