still trying to fix home layout

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ title: "Dominic St-Pierre | Web Developer, entrepreneur"
                 </p>
                 <p>
                   <a href="http://startupvf.com">
-                    <img src="/assets/img/startupvf.png" alt="Startup (v.f.)" />
+                    <img class="img-responsive" src="/assets/img/startupvf.png" alt="Startup (v.f.)" />
                   </ap>
                 </p>
             </div>
