--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: "Dominic St-Pierre | Web Developer, entrepreneur"
 
 <div class="container">
     <div class="row">
-        <div class="col-md-9">
+        <div class="col-sm-8 col-md-9 col-lg-10">
             <div class="blog-header">
                 <h1 class="blog-title">Hi. I'm Dominic St-Pierre.</h1>
                 <p class="lead blog-description">
@@ -24,23 +24,21 @@ title: "Dominic St-Pierre | Web Developer, entrepreneur"
                     market their products. It's in <strong>French</strong>.
                   </p>
         </div>
-        <div class="col-md-2">
-            <div class="page-header">
-                <p>
-                    <img class="img-responsive" src="/assets/img/me.jpg" alt="Dominic St-Pierre" />
-                </p>
-                <!-- Place this tag where you want the widget to render. -->
-                <div class="g-follow" data-annotation="none" data-height="20" data-href="//plus.google.com/110937687841710480769" data-rel="author"></div>
-                <p>
-                    <a href="https://twitter.com/dominicstpierre" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @dominicstpierre</a>
-                    <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
-                </p>
-                <p>
-                  <a href="http://startupvf.com">
-                    <img class="img-responsive" src="/assets/img/startupvf.png" alt="Startup (v.f.)" />
-                  </ap>
-                </p>
-            </div>
+        <div class="col-sm-3 col-md-2 col-lg-1">
+              <p>
+                  <img class="img-responsive" src="/assets/img/me.jpg" alt="Dominic St-Pierre" />
+              </p>
+              <!-- Place this tag where you want the widget to render. -->
+              <div class="g-follow" data-annotation="none" data-height="20" data-href="//plus.google.com/110937687841710480769" data-rel="author"></div>
+              <p>
+                  <a href="https://twitter.com/dominicstpierre" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @dominicstpierre</a>
+                  <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
+              </p>
+              <p>
+                <a href="http://startupvf.com">
+                  <img class="img-responsive" src="/assets/img/startupvf.png" alt="Startup (v.f.)" />
+                </ap>
+              </p>
         </div>
     </div>
 
