added pagination, added blog and about page

--- a/about.html
+++ b/about.html
@@ -1,55 +1,19 @@
 ---
-layout: layout
-title: "Dominic St-Pierre | About Me"
+layout: post
+title: "Who am I?"
 ---
 
-{% include nav.html param="about" %}
+Hey there, my name is Dominic St-Pierre. I'm a software engineer living in 
+the middle of the wood north of Montreal, Québec, Canada.
 
-<div class="container blog-main">
-    <div class="row">
-        <div class="col-md-10">
-            <div class="blog-header">
-                <h1 class="blog-title">Not available atm</h1>
-                <p class="lead blog-description">
-                  I'm unavailable at the moment. I think consulting is behind me and
-                  do not plan on doing consulting again.
-                </p>
-            </div>
-        </div>
-        <div class="col-md-2">
-            <div class="page-header">
-                <p>
-                    <img class="img-responsive" src="/assets/img/me.jpg" alt="Dominic St-Pierre" />
-                </p>
-                <!-- Place this tag where you want the widget to render. -->
-                <div class="g-follow" data-annotation="none" data-height="20" data-href="//plus.google.com/110937687841710480769" data-rel="author"></div>
-                <p>
-                    <a href="https://twitter.com/dominicstpierre" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @dominicstpierre</a>
-                    <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
-                </p>
-            </div>
-        </div>
-    </div>
-</div>
+since 2008 I'm building product for myself trying to find one that users will find useful and that I'll 
+have a blast maintaining and growing.
 
+The two last attempt were [LeadFuze](https://www.leadfuze.com) and [Roadmap](https://roadmap.space).
 
-<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+In September 2018 I publish [a book on Go and writing SaaS app](https://buildsaasappingo.com). It took me 11 months to write the book 
+and the accompagning source code. It was pretty fun, but super hard.
 
-<script type="text/javascript">
-  $(function() {
-    var e = 'ZG9taW5pY3N0cGllcnJlQGdtYWlsLmNvbQ==';
-    var base_url = '//formspree.io/';
-    var action = base_url + atob(e);
-    $('#contact-form').attr('action', action);
-  });
-</script>
+### Need a reliable developer?
 
-</script>
-<!-- Place this tag after the last widget tag. -->
-<script type="text/javascript">
-    (function () {
-        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-        po.src = 'https://apis.google.com/js/platform.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-    })();
-</script>
+I'm doing consulting here and there, mostly depending on project. Contact me if you want to chat.
