added way to locally test and fixed an issue with nil date

--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: layout
 title: "Looks like that one's gone missing"
 summary: "The blog's categories and tags did changed lately."
 ---
