--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: layout
 title: "Dominic St-Pierre | Engineer | Author | Entrepreneur"
+date: 2019-02-03 13:48:50 UTC
 ---
 
 <section class="main">
