--- a/cto.html
+++ b/cto.html
@@ -15,8 +15,7 @@ storeurl: https://store.dominicstpierre.com/cto-as-a-service
 
 <div class="lg:flex">
 	<div class="w-full lg:w-1/3 xl:w-1/4">
-		<p class="shadow-2xl">
-		</p>
+		<img src="/assets/img/cto.png" alt="Products I've built" />
 	</div>
 	<div class="p-12 w-full lg:w-2/3 xl:w-3/4">
 		<p>
