applied changes to cto copy

--- a/cto.html
+++ b/cto.html
@@ -4,13 +4,14 @@ title: "CTO as a service"
 permalink: "/cto-as-a-service"
 
 course: "CTO as a service"
-subtitle: "I can help you build and launch your SaaS affordably."
+subtitle: "Build and launch your SaaS affordably"
+buytext: "Starting at"
 price: "$3000/month"
 storeurl: https://store.dominicstpierre.com/cto-as-a-service
 ---
 
 <h2 class="text-center">
-	Are you looking for a reliable programmer to build your product?
+	Get a reliable programmer for your project
 </h2>
 
 <div class="lg:flex">
@@ -19,18 +20,13 @@ storeurl: https://store.dominicstpierre.com/cto-as-a-service
 	</div>
 	<div class="p-12 w-full lg:w-2/3 xl:w-3/4">
 		<p>
-			Maybe you've tried one or two resources and did not have good results?
-		</p>
-		<p>
-			I've built a <a href="/about">handful of SaaS since 2008</a>, and I enjoy
+			I've built a <a href="/about">eight SaaS products since 2008</a>, and I enjoy
 			this type of software. That's why I'm offering my development
 			services, but more specifically, as CTO to hire.
 		</p>
 		<p>
-			If you're a non-technical founder, you know how difficult it is to find a
-			good developer that will get you that famous v1. Yes, there are all sorts
-			of no-code apps popping lately, but this will never come close to real
-			custom-built software.
+			It's difficult for a non-technical founder to find a good developer. I'm 
+			experienced, and will help you build your v1.
 		</p>
 	</div>
 </div>
@@ -39,11 +35,10 @@ storeurl: https://store.dominicstpierre.com/cto-as-a-service
 	<div class="p-8 w-full lg:w-1/2">
 		<h3>How does it work?</h3>
 		<p>
-			We first need to talk about your product and your expectative. You may
-			schedule the
+			Schedule your 
 			<a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/dominicstpierre/cto'});return false;">
 				initial meeting here
-			</a>.
+			</a>. We'll talk about your product idea, and outline some first steps.
 		</p>
 		<p>
 			In that discussion, I will be able to tell you if I can help you and
@@ -59,18 +54,16 @@ storeurl: https://store.dominicstpierre.com/cto-as-a-service
 	<div class="p-8 w-full lg:w-1/2">
 		<h3>Who owns what?</h3>
 		<p>
-			You're the only owner of everything created. You have all the
-			intellectual property of the product. Since payments are in advance,
-			I'm working directly on your GitHub repository, and you may cancel at
-			any time.
+			You own everything created. You have all the intellectual property of the 
+			product. Since payments are in advance, I'm working directly on your 
+			GitHub repository, and you may cancel at any time.
 		</p>
 		<p>
-			You're not giving any equity, and you're in control of all assets.
+			You won't give up any equity, and you're in control of all assets.
 		</p>
 		<p>
-			It's a productized service I'm offering because I've built lots of
-			SaaS in more than ten years. I have lots of common SaaS components
-			ready to go.
+			It's a productized service I'm offering because I've built lots of SaaS 
+			in more than ten years. I have lots of common SaaS components ready to go.
 		</p>
 	</div>
 </div>
@@ -83,7 +76,7 @@ storeurl: https://store.dominicstpierre.com/cto-as-a-service
 			everything you need to be operational.
 		</p>
 		<p>
-			You'll be able to accept payment, have a polished user onboarding,
+			You'll be able to accept payments, have a polished user onboarding,
 			transactional emails, and an admin dashboard to monitor and manage
 			different aspects of the product.
 		</p>
@@ -94,9 +87,9 @@ storeurl: https://store.dominicstpierre.com/cto-as-a-service
 		</p>
 	</div>
 	<div class="p-8 w-full lg:w-1/2">
-		<h3>What if I need a new feature?</h3>
+		<h3>What if you need a new feature?</h3>
 		<p>
-			I'm happy to help you maintain the product. There will have a $1,000 per
+			I'm happy to help you maintain the product. There will be a $1,000 per
 			month subscription that includes monitoring, bug fixing, and lite new
 			feature development each month.
 		</p>
