fixed typo in cto

--- a/cto.html
+++ b/cto.html
@@ -20,7 +20,7 @@ storeurl: https://store.dominicstpierre.com/cto-as-a-service
 	</div>
 	<div class="p-12 w-full lg:w-2/3 xl:w-3/4">
 		<p>
-			I've built a <a href="/about">eight SaaS products since 2008</a>, and I enjoy
+			I've built <a href="/about">eight SaaS products since 2008</a>, and I enjoy
 			this type of software. That's why I'm offering my development
 			services, but more specifically, as CTO to hire.
 		</p>
