added video and more content for pragmatic elm course

--- a/videos/pragelm.html
+++ b/videos/pragelm.html
@@ -7,6 +7,7 @@ course: "Pragmatic Elm web applications"
 subtitle: "[Coming soon]: Learn how to build long-term maintainable single-page application in Elm."
 price: "$99"
 sales: "$59"
+video: "https://www.youtube.com/embed/d1KyUezJ4yI"
 ---
 
 <h2 class="text-center">
@@ -52,7 +53,9 @@ sales: "$59"
 			building a frontend web application in general.
 		</p>
 		<p>
-			Also, make sure you read the Elm guide before starting the course.
+			Also, make sure you read 
+			<a href="https://guide.elm-lang.org/" target="_blank">the Elm guide</a> 
+			before starting the course.
 		</p>
 	</div>
 	<div class="p-8 w-full lg:w-1/2">
@@ -67,27 +70,64 @@ sales: "$59"
 <div class="pt-20 lg:flex">
 	<div class="p-8 w-full lg:w-1/2">
 		<h3>Build a SPA in Elm</h3>
+		<p>
+			I'll teach you how to build a single-page application. One that you'll 
+			have a good time maintaining without feeling the urge to rewrite it after 
+			three years.
+		</p>
+		<p>
+			Learning all about the SPA model will also give you the knowledge to 
+			build a multi-page web application so you get the best of both worlds and 
+			can apply the right paradigm based on the situation.
+		</p>
 	</div>
 	<div class="p-8 w-full lg:p-0 lg:w-1/2">
-		<img src="http://via.placeholder.com/1600x900" alt="screenshot" />
+		<img class="max-w-full" src="/images/pragelm-ss1.png" alt="Code screenshot 1" />
 	</div>
 </div>
 
 <div class="pt-20 lg:flex">
 	<div class="p-8 w-full lg:p-0 lg:w-1/2">
-		<img src="http://via.placeholder.com/1600x900" alt="screenshot" />
+		<img class="max-w-full" src="/images/pragelm-ss2.png" alt="Code screenshot 2" />
 	</div>
 	<div class="p-8 w-full lg:w-1/2">
 		<h3>JSON in&lt;-&gt;out and websocket</h3>
+		<p>
+			We will communicate with a fictive backend via HTTP requests and 
+			WebSocket.
+		</p>
+		<p>
+			We will cover JSON encoding and decoding in Elm. How creating the types 
+			first helps design better frontend web applications.
+		</p>
+		<p>
+			I'll show you how you can pass messages in and out of your application 
+			using websocket and how you have to revert to using JavaScript for that.
+		</p>
 	</div>
 </div>
 
 <div class="pt-20 lg:flex">
 	<div class="p-8 w-full lg:w-1/2">
 		<h3>Uploading file, drag &amp; drop, JavaScript ports</h3>
+		<p>
+			I'll cover how to embrace how Elm interacts with JavaScript and how you 
+			can leverage your knowledge of JavaScript to perform key aspects of 
+			typical web applications.
+		</p>
+		<p>
+			There are some aspects that Elm is not supporting natively. Writing and 
+			reading the local storage, for example. For that, you'll need to pass 
+			messages via JavaScript ports.
+		</p>
+		<p>
+			This last part makes sure the applications you build with Elm are not 
+			limited in features due to Elm not supporting something you need in the 
+			browser.
+		</p>
 	</div>
 	<div class="p-8 w-full lg:p-0 lg:w-1/2">
-		<img src="http://via.placeholder.com/1600x900" alt="screenshot" />
+		<img class="max-w-full" src="/images/pragelm-ss3.png" alt="Code screenshot 3" />
 	</div>
 </div>
 
@@ -95,7 +135,7 @@ sales: "$59"
 	<h2>Be notified when the course launch</h2>
 	<p>
 		Secure a price at $59 by signing up now. When the course launch you'll get
-		a special coupon code to get the book at $59.
+		a special coupon code to get the course at $59.
 	</p>
 	<form action="https://store.dominicstpierre.com/email_lists/43522/subscriptions" accept-charset="UTF-8" method="post">
 		<input name="utf8" type="hidden" value="✓" />
