--- a/videos/index.html
+++ b/videos/index.html
@@ -8,7 +8,7 @@ title: "Video courses"
 		<div class="lg:flex">
 			<div class="w-full lg:w-1/3 xl:w-1/4">
 				<p class="shadow-2xl">
-					<img src="http://via.placeholder.com/432x614" alt="Pragmatic Elm web applications" />
+					<img src="/images/pragelm-availablesoon.png" alt="Pragmatic Elm web applications" />
 				</p>
 			</div>
 			<div class="w-full lg:pl-8 lg:w-2/3 xl:w-3/4 content">
