fixed link to my book

--- a/books/index.html
+++ b/books/index.html
@@ -15,7 +15,7 @@ title: "Books"
 				<h3>Build SaaS apps in Go</h3>
 				<p>Learn how to build an API-first web application for your SaaS / side projects.</p>
 				<p class="pt-20">
-					<a href="/books/build-saas-apps-in-go" class="btn">
+					<a href="https://buildsaasappingo.com/" class="btn">
 						Detail
 					</a>
 				</p>
